[package]
name    = "nalgebra"
version = "0.25.4"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "General-purpose linear algebra library with transformations and statically-sized or dynamically-sized matrices."
documentation = "https://www.nalgebra.org/docs"
homepage = "https://nalgebra.org"
repository = "https://github.com/dimforge/nalgebra"
readme = "README.md"
categories = [ "science", "mathematics", "wasm", "no-std" ]
keywords = [ "linear", "algebra", "matrix", "vector", "math" ]
license = "BSD-3-Clause"
edition = "2018"
exclude = ["/ci/*", "/.travis.yml", "/Makefile"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "nalgebra"
path = "src/lib.rs"

[features]
default         = [ "std" ]
std             = [ "matrixmultiply", "simba/std", "serde/std" ]
sparse = [ ]
debug = [ "approx/num-complex", "rand" ]
alloc = [ ]
io = [ "pest", "pest_derive" ]
compare = [ "matrixcompare-core" ]
libm = [ "simba/libm" ]
libm-force = [ "simba/libm_force" ]
no_unsound_assume_init = [ ]

# Conversion
convert-mint = [ "mint" ]
convert-glam = [ "glam" ]
convert-glam-unchecked = [ "convert-glam" ] # Unable edgy conversions like Mat4 -> Isometry3
convert-bytemuck = [ "bytemuck" ]

# Serialization
serde-serialize = [ "serde", "num-complex/serde" ]
abomonation-serialize = [ "abomonation" ]

# Randomness
rand-no-std = [ "rand-package" ]
rand        = [ "rand-no-std", "rand-package/std", "rand-package/std_rng", "rand_distr" ]

# Tests
arbitrary        = [ "quickcheck" ]
proptest-support = [ "proptest" ]
slow-tests       = []

[dependencies]
typenum        = "1.12"
rand-package   = { package = "rand", version = "0.8", optional = true, default-features = false }
num-traits     = { version = "0.2", default-features = false }
num-complex    = { version = "0.3", default-features = false }
num-rational   = { version = "0.3", default-features = false }
approx         = { version = "0.4", default-features = false }
simba          = { version = "0.4", default-features = false }
alga           = { version = "0.9", default-features = false, optional = true }
rand_distr     = { version = "0.4", default-features = false, optional = true }
matrixmultiply = { version = "0.3", optional = true }
serde          = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
abomonation    = { version = "0.7", optional = true }
mint           = { version = "0.5", optional = true }
glam           = { version = "0.13", optional = true }
quickcheck     = { version = "1", optional = true }
pest           = { version = "2", optional = true }
pest_derive    = { version = "2", optional = true }
bytemuck       = { version = "1.5", optional = true }
matrixcompare-core = { version = "0.1", optional = true }
proptest = { version = "1", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
serde_json = "1.0"
rand_xorshift = "0.3"
rand_isaac = "0.3"
criterion = "0.2.10"

# For matrix comparison macro
matrixcompare = "0.2.0"
itertools = "0.10"

[workspace]
members = [ "nalgebra-lapack", "nalgebra-glm", "nalgebra-sparse" ]
resolver = "2"

[[example]]
name = "matrixcompare"
required-features = ["compare"]

[[bench]]
name = "nalgebra_bench"
harness = false
path = "benches/lib.rs"

[profile.bench]
lto = true

[package.metadata.docs.rs]
# Enable certain features when building docs for docs.rs
features = [ "proptest-support", "compare" ]
