[package]
name = "nalgebra-glm"
version = "0.7.0"
authors = ["sebcrozet <developer@crozet.re>"]

description = "A computer-graphics oriented API for nalgebra, inspired by the C++ GLM library."
documentation = "https://www.nalgebra.org/rustdoc_glm/nalgebra_glm/index.html"
homepage = "https://nalgebra.org"
repository = "https://github.com/rustsim/nalgebra"
readme = "../README.md"
categories = [ "science" ]
keywords = [ "linear", "algebra", "matrix", "vector", "math" ]
license = "BSD-3-Clause"
edition = "2018"

[features]
default         = [ "std" ]
std             = [ "nalgebra/std", "simba/std" ]
stdweb          = [ "nalgebra/stdweb" ]
arbitrary       = [ "nalgebra/arbitrary" ]
serde-serialize = [ "nalgebra/serde-serialize" ]
abomonation-serialize = [ "nalgebra/abomonation-serialize" ]

[dependencies]
num-traits = { version = "0.2", default-features = false }
approx = { version = "0.3", default-features = false }
simba = { version = "0.1", default-features = false }
nalgebra = { path =  "..", version = "0.21", default-features = false }
