[package]
name = "nalgebra-glm"
version = "0.14.0"
authors = ["sebcrozet <developer@crozet.re>"]

description = "A computer-graphics oriented API for nalgebra, inspired by the C++ GLM library."
documentation = "https://www.nalgebra.org/docs"
homepage = "https://nalgebra.org"
repository = "https://github.com/dimforge/nalgebra"
readme = "../README.md"
categories = [ "science", "mathematics", "wasm", "no standard library" ]
keywords = [ "linear", "algebra", "matrix", "vector", "math" ]
license = "BSD-3-Clause"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default               = [ "std" ]
std                   = [ "nalgebra/std", "simba/std" ]
arbitrary             = [ "nalgebra/arbitrary" ]
serde-serialize       = [ "nalgebra/serde-serialize-no-std" ]
abomonation-serialize = [ "nalgebra/abomonation-serialize" ]

[dependencies]
num-traits = { version = "0.2", default-features = false }
approx = { version = "0.5", default-features = false }
simba = { version = "0.6", default-features = false }
nalgebra = { path =  "..", version = "0.28", default-features = false }
