[package]
name = "nalgebra-glm"
version = "0.16.0"
authors = ["sebcrozet <developer@crozet.re>"]

description = "A computer-graphics oriented API for nalgebra, inspired by the C++ GLM library."
documentation = "https://www.nalgebra.org/docs"
homepage = "https://nalgebra.org"
repository = "https://github.com/dimforge/nalgebra"
readme = "../README.md"
categories = [ "science", "mathematics", "wasm", "no standard library" ]
keywords = [ "linear", "algebra", "matrix", "vector", "math" ]
license = "BSD-3-Clause"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default               = [ "std" ]
std                   = [ "nalgebra/std", "simba/std" ]
arbitrary             = [ "nalgebra/arbitrary" ]
serde-serialize       = [ "nalgebra/serde-serialize-no-std" ]
cuda                  = [ "nalgebra/cuda" ]

# Conversion
convert-mint = [ "nalgebra/mint" ]
convert-bytemuck = [ "nalgebra/bytemuck" ]
convert-glam013 = [ "nalgebra/glam013" ]
convert-glam014 = [ "nalgebra/glam014" ]
convert-glam015 = [ "nalgebra/glam015" ]
convert-glam016 = [ "nalgebra/glam016" ]
convert-glam017 = [ "nalgebra/glam017" ]
convert-glam018 = [ "nalgebra/glam018" ]

[dependencies]
num-traits = { version = "0.2", default-features = false }
approx = { version = "0.5", default-features = false }
simba = { version = "0.7", default-features = false }
nalgebra = { path =  "..", version = "0.30", default-features = false }
