[package]
name = "nalgebra-lapack"
version = "0.26.0"
authors = ["Sébastien Crozet <developer@crozet.re>", "Andrew Straw <strawman@astraw.com>"]

description = "Matrix decompositions using nalgebra matrices and Lapack bindings."
homepage = "https://nalgebra.rs"
repository = "https://github.com/dimforge/nalgebra"
readme = "../README.md"
categories = ["science", "mathematics"]
keywords = ["linear", "algebra", "matrix", "vector", "lapack"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["lapack-netlib"]
serde-serialize = ["serde", "nalgebra/serde-serialize"]
proptest-support = ["nalgebra/proptest-support"]
arbitrary = ["nalgebra/arbitrary"]
slow-tests = []

# For BLAS/LAPACK
lapack-openblas = ["lapack-src/openblas"]
lapack-netlib = ["lapack-src/netlib"]
lapack-accelerate = ["lapack-src/accelerate"]
lapack-mkl = ["lapack-mkl-static-seq"]
lapack-mkl-static-seq = ["lapack-src/intel-mkl-static-sequential"]
lapack-mkl-static-par = ["lapack-src/intel-mkl-static-parallel"]
lapack-mkl-dynamic-seq = ["lapack-src/intel-mkl-dynamic-sequential"]
lapack-mkl-dynamic-par = ["lapack-src/intel-mkl-dynamic-parallel"]
lapack-custom = []

[dependencies]
nalgebra = { version = "0.34", path = ".." }
num-traits = "0.2"
num-complex = { version = "0.4", default-features = false }
simba = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
lapack = { version = "0.20", default-features = false }
lapack-src = { version = "0.13", default-features = false, optional = true }
thiserror = "1.0"
# clippy = "*"

[dev-dependencies]
nalgebra = { version = "0.34", features = ["arbitrary", "rand"], path = ".." }
proptest = { version = "1", default-features = false, features = ["std"] }
quickcheck = "1"
approx = "0.5"
rand = "0.8"
