[package]
name = "nalgebra-macros"
version = "0.3.0"
authors = ["Andreas Longva", "Sébastien Crozet <developer@crozet.re>"]
edition = "2024"
description = "Procedural macros for nalgebra"
documentation = "https://www.nalgebra.rs/docs"
homepage = "https://nalgebra.rs"
repository = "https://github.com/dimforge/nalgebra"
readme = "../README.md"
categories = ["science", "mathematics"]
keywords = ["linear", "algebra", "matrix", "vector", "math"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nalgebra = { version = "0.34", path = ".." }
